# kong-vllm-demo

./: .gitignore  LICENSE  README.md  chat-template.j2  gateway.yaml  kong-ai-proxy-vllm-embedding.yaml  kong-ai-proxy-vllm-gptoss-chat-completions.yaml  kong-http-logger.yaml  kong-ingress-vllm-embedding.yaml  kong-ingress-vllm-gptoss-chat-completions.yaml  kong-ingress-vllm-gptoss-models.yaml  kong-key-auth.yaml  log-receiver.yaml  portal-secrets.yaml.example  portal.yaml  vllm-embedding-service.yaml  vllm-gptoss-service.yaml
echo/: echo-ingress.yaml  echo-service.yaml
litellm/: .gitignore  README.md  litellm-helm-1.82.3.tgz  litellm-test-secret.yaml.example  namespace.yaml  values.yaml
portal/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
portal/templates/: index.html
test/: .gitignore  README.md  main.py  pyproject.toml  test-embedding.py  test-litellm-embedding.py  test-litellm.py
